WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276471
Missing inflatedStrokeRect in CanvasRenderingContext2DBase::strokeInternal
https://bugs.webkit.org/show_bug.cgi?id=276471
Summary
Missing inflatedStrokeRect in CanvasRenderingContext2DBase::strokeInternal
Gerald Squelart
Reported
2024-07-10 21:56:24 PDT
Bug 198416
changed the `didDraw` call inside `CanvasRenderingContext2DBase::strokeInternal`, but removed a needed `inflatedStrokeRect`. Without it, some strokes may appear truncated in the corners (at least until the next refresh).
rdar://131084323
Attachments
Add attachment
proposed patch, testcase, etc.
Gerald Squelart
Comment 1
2024-07-10 21:59:38 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30681
EWS
Comment 2
2024-07-12 06:57:39 PDT
Committed
280905@main
(53cb4c049651): <
https://commits.webkit.org/280905@main
> Reviewed commits have been landed. Closing PR #30681 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug