REGRESSION (278000@main): Adobe Acrobat signature shows a broken line https://bugs.webkit.org/show_bug.cgi?id=276471 rdar://131084323

Reviewed by Simon Fraser.

278000@main removed the inflateStrokeRect code in
CanvasRenderingContext2DBase::strokeInternal(), which caused
stroke corners to be visually clipped off.

Fixing by re-adding the missing inflatedStrokeRect.

* LayoutTests/fast/canvas/canvas-strokePath-round-lineCap-expected.html: Added.
* LayoutTests/fast/canvas/canvas-strokePath-round-lineCap.html: Added.
* Source/WebCore/html/canvas/CanvasRenderingContext2DBase.cpp:
(WebCore::CanvasRenderingContext2DBase::strokeInternal):

Canonical link: https://commits.webkit.org/280905@main